# silvia-istrate-base

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
infra/: alb.tf  backend.tf  cloudfront.tf  ecr.tf  ecs.tf  iam.tf  oidc.tf  outputs.tf  providers.tf  variables.tf
samples/: sample.jsonl
src/log_analytics/: api.py  cli.py  core.py  sources.py
src/log_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_streaming.py
